clusters/k3s-home/apps/media/whisparr/nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whisparr-nodeport
  namespace: media
spec:
  type: NodePort
  selector:
    app.kubernetes.io/instance: whisparr
    app.kubernetes.io/name: whisparr
  ports:
    - port: 6969
      targetPort: 6969
      nodePort: 30969  # You'll access via any-node-ip:30969
      protocol: TCP
