clusters/k3s-home/apps/media/whisparr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whisparr-http-route
  namespace: media
spec:
  parentRefs:
    - name: main-gateway
      namespace: networking
  hostnames:
    - "whisparr.fletcherlabs.net"
  rules:
    - backendRefs:
        - name: whisparr
          port: 6969
